[REFACTOR] PR review 반영