@@ -1,6 +1,7 @@
 package com.echall.platform.config;
 
 import java.util.Collections;
+import java.util.List;
 
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
@@ -126,16 +127,19 @@ public class SecurityConfig {
 
 	@Bean
 	public CorsConfigurationSource corsConfigurationSource() {
+		return request -> {
+			CorsConfiguration corsConfiguration = new CorsConfiguration();
 
-		CorsConfiguration corsConfiguration = new CorsConfiguration();
-		corsConfiguration.setAllowedHeaders(Collections.singletonList("*"));
-		corsConfiguration.setAllowedMethods(Collections.singletonList("*"));
-		corsConfiguration.setAllowedOriginPatterns(Collections.singletonList("http://localhost:3000"));
-		corsConfiguration.setAllowedOriginPatterns(Collections.singletonList("http://http://13.238.253.88:8080"));
-		corsConfiguration.setAllowCredentials(true);
+			// corsConfiguration.addAllowedOrigin(System.getenv("WEBSITE_DOMAIN"));
+			// corsConfiguration.addAllowedOrigin(System.getenv("API_DOMAIN"));
+			corsConfiguration.setAllowedOrigins(List.of("http://localhost:3000", "http://localhost:8080"));
+			corsConfiguration.setAllowedHeaders(Collections.singletonList("*"));
+			corsConfiguration.setExposedHeaders(Collections.singletonList("*"));
+			corsConfiguration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+			corsConfiguration.setAllowedOriginPatterns(Collections.singletonList("http://localhost:3000"));
+			corsConfiguration.setAllowCredentials(true);
+			return corsConfiguration;
+		};
 
-		UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-		source.registerCorsConfiguration("/**", corsConfiguration);
-		return source;
 	}
 }
